Tema preparado para começar

--- a/theme/configs/settings.json
+++ b/theme/configs/settings.json
@@ -1,4 +1,9 @@
 {
-    "current": {},
+    "current": {
+      "showcase_title1": "",
+      "showcase_subtitle_1": "",
+      "showcase_type_1": "",
+      "showcase_cat_1": ""
+    },
     "default": {}
 }
